AM - Some work.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Add a document to the Index</h1>
+            <h1>Add a Document to the Index</h1>
 
             <div class="controls">
                 <div class="input-group">
@@ -20,6 +20,12 @@
                 </div>
 
                 <button id="add_btn">Add Document</button>
+            </div>
+
+            <div class="result">
+                <label for="add_doc_result">Result:</label>
+                <input type="text" id="add_doc_result" readonly>
+            </div>
         </div>
 
         <div class="container">
@@ -60,19 +66,19 @@
 
                 <div class="checkbox-group">
                     <label>
-                        <input type="checkbox" id="search_term_1" checked>
+                        <input type="checkbox" id="chb_search_term_1" checked>
                         Use Search Term #1
                     </label>
                     <label>
-                        <input type="checkbox" id="search_term_2">
+                        <input type="checkbox" id="chb_search_term_2">
                         Use Search Term #2
                     </label>
                     <label>
-                        <input type="checkbox" id="search_term_3">
+                        <input type="checkbox" id="chb_search_term_3">
                         Use Search Term #3
                     </label>
                     <label>
-                        <input type="checkbox" id="search_term_4">
+                        <input type="checkbox" id="chb_search_term_4">
                         Use Search Term #4
                     </label>
                 </div>
