AM - Some work.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <input type="text" id="error_message" readonly>
+
         <div class="container">
             <h1>Add a Document to the Index</h1>
 
@@ -106,9 +108,6 @@
                 <label for="id_result_5">#5:</label>
                 <input type="text" id="id_result_5" readonly>
                 <input type="text" id="score_result_5" readonly>
-            </div>
-
-            <div id="error" class="hidden">
             </div>
         </div>
 
