--- a/public/index_BACKUP.html
+++ b/public/index_BACKUP.html
@@ -7,12 +7,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="container">
-            <!-- Error Logging -->
-            <div id="error" class="hidden"></div>
+        <input type="text" id="error_message" readonly>
 
-            <!-- Add Document to Index -->
+        <div class="container">
             <h1>Add a Document to the Index</h1>
+
             <div class="controls">
                 <div class="input-group">
                     <label for="add_doc_id">Doc ID:</label>
@@ -24,13 +23,16 @@
 
                 <button id="add_btn">Add Document</button>
             </div>
+
             <div class="result">
                 <label for="add_doc_result">Result:</label>
                 <input type="text" id="add_doc_result" readonly>
             </div>
+        </div>
 
-            <!-- Get Document Text -->
+        <div class="container">
             <h1>Get the Text of a Document</h1>
+
             <div class="controls">
                 <div class="input-group">
                     <label for="get_doc_id">Doc ID:</label>
@@ -39,13 +41,16 @@
 
                 <button id="get_btn">Get Document Text</button>
             </div>
+
             <div class="result">
                 <label for="get_doc_text">Document Text:</label>
                 <input type="text" id="get_doc_text" readonly>
             </div>
+        </div>
 
-            <!-- Perform Search using BM25 -->
+        <div class="container">
             <h1>Perform Search using BM25</h1>
+        
             <div class="controls">
                 <div class="input-group">
                     <label for="text_search_term_1">Search Term #1:</label>
@@ -82,6 +87,7 @@
 
                 <button id="search_btn">Perform Search</button>
             </div>
+
             <div class="result">
                 <label for="id_result_1">#1:</label>
                 <input type="text" id="id_result_1" readonly>
